monitoring/configs/athena/kube-prometheus-stack/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monitoring-grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production # Specify the name of your issuer resource
  labels:
    external-dns: enabled
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: monitoring.uclab8.net # Specify a valid domain to reach your application
      name: monitoring-uclab8-net-https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: monitoring-uclab8-tls # Specify the secret name to be used with your application
      allowedRoutes:
        namespaces:
          from: All
